--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-Quantum Computing/QML/__pycache__/*
+Quantum Computing/QML/__pycache__/my_circuit_blueprint.cpython-39.pyc
+Quantum Computing/QML/__pycache__/my_manager.cpython-39.pyc
+Quantum Computing/QML/__pycache__/my_model.cpython-39.pyc
+Quantum Computing/QML/__pycache__/my_qml.cpython-39.pyc
+Quantum Computing/QML/__pycache__/my_training.cpython-39.pyc
